started incorperating shellStructure. Fixed z-index for the title and my name.

--- a/app.css
+++ b/app.css
@@ -13,29 +13,33 @@ body {
 }
 
 .atom {
-    opacity: 90%;
+    /* opacity: 90%; */
     position: absolute;
     transform: translate(-50%, -50%);
     border-radius: 50%;
     text-align: center;
     align-content: center;
-    box-shadow: inset 0 0 2em #00000066,
-        0 0 .5em #00000066;
+    box-shadow: inset 0 -.5em 2em #00000066,
+        0 .5em 1em #00000088;
+    z-index: 1;
 }
 
 header {
+    z-index: 200;
     position: absolute;
     top: 10px;
     left: 20px;
 }
 
 section {
+    z-index: 200;
     position: absolute;
     top: 20px;
     left: 100px;
 }
 
 footer {
+    z-index: 200;
     position: absolute;
     bottom: 10px;
     right: 20px;
